--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Animais - Javascript</title>
+    <title>Animais Fantasticos - JavaScript</title>
 </head>
-<body class="">
+<body>
 
     <div class="grid-container">
     <!-- Menu Principal -->
    <nav class="menu"  data-menu="suave">
-        <ul>
+    <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+        <ul data-menu="list" id="menu">
             <li><a href="#animais">Animais</a></li>
             <li data-dropdown>
                 <a href="sobre.html">Sobre</a>
@@ -203,7 +204,7 @@
     <script type="module" src="./js/tab-navigation.js"></script>
     <script type="module" src="./js/animacoes.js"></script>
     <script type="module" src="./js/modal.js"></script>
-    <script type="module" src="./js/setTimeOut-setInterval.js"></script>
+    <!--<script type="module" src="./js/setTimeOut-setInterval.js"></script>-->
     <!--<script src="./js/index.js"></script>-->
 </body>
 </html>
