feat: adicionando horário de funcionamento

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <li>+55 21 98767-9987</li>
             <li>Rua Bras Cubas</li>
             <li>Rio de Janeiro</li>
+            <li data-semana="1,2,3,4,5" data-horario="8,18">Seg à Sex das 8 às 18</li>
         </ul>
     </section>
 
